# rotation

./: CMakeLists.txt  README.md  readme.txt  rotation.kdev4
include/: rotation.h
src/: main.cpp  rotation.cpp
